fix broken style

--- a/react-qa/src/qa/answer.scss
+++ b/react-qa/src/qa/answer.scss
@@ -20,5 +20,8 @@
       flex-grow: 1;
       display: flex;
     }
+    .react-mde {
+      width: 100%;
+    }
   }
 }
